...
        mutableStateOf(false)
    }


    
    TopAppBar(title = {
                      Text(modifier = Modifier.testTag("searchtext"), text = title,
                          color = MaterialTheme.colors.onSecondary,
                          style = TextStyle(fontWeight = FontWeight.Bold,
                                           fontSize = 15.sp))
    },
        actions = {
                  if (isMainScreen){
                      IconButton(onClick = {
                          onAddActionClicked.invoke()
                      }) {
                           Icon(imageVector = Icons.Default.Search, 
                               contentDescription = "search icon")
                          
                      }

                  }else Box {}
                  
        },
...
