...
@ExperimentalComposeUiApi
@Composable
fun SearchScreen(navController: NavController) {
    // Search Screen UI
    Scaffold(topBar = {
        SearchAppBar(
            title = "Search",
            navController = navController,
                     icon = Icons.Default.ArrowBack,
                     isMainScreen = false,
                     ){
            navController.popBackStack()
        }
...
        colors = TextFieldDefaults.outlinedTextFieldColors(
              focusedBorderColor = Color.Blue,
              cursorColor = Color.Black),
                     shape = RoundedCornerShape(15.dp),
                     modifier = Modifier
                         .fillMaxWidth()
                         .padding(start = 10.dp, end = 10.dp).testTag("textbox"))


}



...
