...

            Image(painter = painterResource(id = R.drawable.img_1),
                contentDescription = "rain_cloudy_sun",
            contentScale = ContentScale.FillBounds,
            modifier = Modifier.size(150.dp))

            Text(text = "Find Weather",
                style = MaterialTheme.typography.h4,
                color = Color.LightGray
            )

        }

...
